framec_tests/language_specific/typescript/v3_capabilities/system_params/negative/system_enter_param_mismatch_v3.frm
@target typescript
# @expect: E417

// Negative: system $>(...) params do not match start state's $>() handler.

system SystemEnterParamMismatchTs($(color), $>(enterColor), domain) {
    interface:
        run()

    machine:
        $Red(color: string) {
            $>(wrongName: string) {
            }
            run() {
                -> $Red(color)
            }
        }

    domain:
        domain = null
}

